<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".ui.SignupActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_activity_signup"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtRNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_name"
        android:inputType="text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"/>

    <EditText
        android:id="@+id/txtREmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"/>

    <EditText
        android:id="@+id/txtRContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"/>

    <EditText
        android:id="@+id/txtRreContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_password_confirm"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="45dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"/>

    <!-- Campos de dirección -->
    <EditText
        android:id="@+id/txtRShipName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Nombre de envío"
        android:inputType="text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"/>

    <EditText
        android:id="@+id/txtRShipAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Dirección de envío"
        android:inputType="text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"/>

    <EditText
        android:id="@+id/txtRShipCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Ciudad de envío"
        android:inputType="text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"/>

    <EditText
        android:id="@+id/txtRShipRegion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Región de envío"
        android:inputType="text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"/>

    <EditText
        android:id="@+id/txtRShipPostalCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Código Postal de envío"
        android:inputType="text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"/>

    <EditText
        android:id="@+id/txtRShipCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="País de envío"
        android:inputType="text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="48dp"
        android:textColorHint="#757575"/>

    <Button
        android:id="@+id/btnRegistrarU"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_register"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"/>

</LinearLayout>
